initial changes tailoring galaxy to metaboflow

--- a/static/welcome.html
+++ b/static/welcome.html
@@ -7,11 +7,10 @@
     <body class="m-0">
         <div class="py-4">
             <div class="container">
-                <h2>Hello, <strong>Galaxy</strong> is running!</h2>
-                To customize this page edit <code>static/welcome.html</code>
+                <img src="images/metaboflow.png">
+                <h2>Welcome to the <strong>Metaboflow</strong> Galaxy Instance!</h2>
                 <br>
-                <a target="_blank" href="https://docs.galaxyproject.org/en/latest/admin/config.html" class="btn btn-primary">Configuring Galaxy »</a>
-                <a target="_blank" href="https://galaxyproject.org/admin/tools/add-tool-from-toolshed-tutorial/" class="btn btn-primary">Installing Tools »</a>
+
             </div>
             <br>
             <div class="container">
@@ -23,11 +22,25 @@
             </div>
         </div>
         <div class="container">
+            <b>
+                MetaboFlow aims at building, testing and delivering cloud-based Galaxy workflow(s), with the computational capacity to process datasets with 1000's of samples and simultaneously 
+                capture all metadata associated to allow rigorous reproducibility and reporting. 
+            </b>
             <p>
-                <a target="_blank" class="reference" href="http://galaxyproject.org/">
-                Galaxy</a> is an open platform for supporting data intensive
-                research. Galaxy is developed by <a target="_blank" class="reference" href="https://galaxyproject.org/galaxy-team/">The Galaxy Team</a>
-                with the support of  <a target="_blank" class="reference" href="https://github.com/galaxyproject/galaxy/blob/dev/CONTRIBUTORS.md">many contributors</a>.
+                MetaboFlow infrastructure is formulated based on several community agreed processing, feature extraction and compound identification tools. The necessary functionality is incorporated so that it can be
+                readily used in conjunction with popular online metabolomics databases such as MetaboLights.
+    
+            </p>
+
+        </div>
+        <div class="container">
+            <img src="images/isaapi.png">
+            <img src="images/w4m.png">
+            <img src="images/dimspy.png">
+        </div>
+        <div class="container">
+            <p>
+                Metabolights-labs.org is maintained by the Metabolights team at the  <a target="_blank" class="reference" href="https://www.ebi.ac.uk/"> EMBL-EBI </a>. If you have an issue, please get in touch at <a href="mailto:metabolights-help@ebi.ac.uk">metabolights-help@ebi.ac.uk</a>
             </p>
             <footer>
                 The <a target="_blank" class="reference" href="http://galaxyproject.org/">Galaxy Project</a>
